# feedback-mcp

./: .gitignore  README.md  README_en.md  README_zh.md  pyproject.toml  start-dev.sh  start.sh
docs/: DESIGN-feishu-multi-tenant.md  DEV-PLAN.md  PRD-feishu-multi-tenant.md  README.md  REFACTOR-react-redux.md
docs/v0.1.0-multi-tenant/: DESIGN-feishu-multi-tenant.md
docs/v2.0-react-frontend/: TEST-PLAN.md
frontend/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  LanguageSwitcher.tsx  index.ts
frontend/src/features/admin/: AdminDashboard.tsx  AdminLoginPage.tsx  InitPage.tsx  adminSlice.ts
frontend/src/features/auth/: LoginPage.tsx  authSlice.test.ts  authSlice.ts
frontend/src/features/tasks/: TasksPage.tsx  i18n.ts  tasksSlice.test.ts  tasksSlice.ts
frontend/src/features/tasks/components/: EmptyState.tsx  HistoryDetail.tsx  Sidebar.tsx  TaskDetail.tsx  index.ts
frontend/src/features/tasks/hooks/: useNotificationSound.ts
frontend/src/features/user/: userSlice.ts
frontend/src/hooks/: useAppDispatch.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  zh.json
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/tests/: setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: storage.test.ts  storage.ts
src/: __init__.py  __main__.py  auth.py  core.py  feishu.py  feishu_ws_listener.py  oauth.py  routing.py  server.py  users.py  web.py  web_multi_tenant.py
src/static/: sw.js
src/templates/: index.html  multi_tenant.html
tests/: run_agent_integration.py  simple_sse_test.py  test_app.py  test_integration.py  test_mcp_e2e_integration.py  test_mcp_native.py  test_mcp_tool.py  test_multi_requests.py  test_multi_tenant.py  test_sse_integration.py
